--- a/data-prep.ipynb
+++ b/data-prep.ipynb
@@ -9,11 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from os import listdir\n",
@@ -21,7 +20,6 @@
     "import pandas as pd\n",
     "import emoji\n",
     "import re\n",
-    "import numpy as np\n",
     "from stop_words import get_stop_words \n",
     "from ftfy import fix_text\n",
     "from json import load\n",
@@ -30,19 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "f = open('chat.txt', 'r')\n",
     "# Feed the file text into findall(); it returns a list of all the found strings\n",
-    "strings = re.findall('.(\\d.\\d.\\d+\\s+\\d+:+\\d+:+\\d+).\\s+(\\w+\\s\\w+\\s\\w+|\\w+\\s\\w+|\\w+):\\s(.*)', f.read())\n",
+    "strings = re.findall('.(\\d+.\\d+.\\d+\\s+\\d+:+\\d+:+\\d+).\\s+(\\w+\\s\\w+\\s\\w+|\\w+\\s\\w+|\\w+):\\s(.*)', f.read())\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +198,7 @@
        "9                 Koldo  2/7/16 16:52:30             1"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +302,7 @@
        "4  Paula AAFermin Cueto  1/7/16 21:27:48        de  False"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,12 +318,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_msg_rep.to_csv('whatsapp_chat.csv', sep = '\\t')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
