--- a/data-prep.ipynb
+++ b/data-prep.ipynb
@@ -4,68 +4,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Miniming whatsapp chat with Koldo"
+    "# Mining whatsapp chat with Koldo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
     "import pandas as pd\n",
     "import emoji\n",
     "import re\n",
-    "from stop_words import get_stop_words \n",
+    "#from stop_words import get_stop_words \n",
     "from ftfy import fix_text\n",
-    "from json import load\n",
     "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('chat.txt', 'r')\n",
-    "# Feed the file text into findall(); it returns a list of all the found strings\n",
-    "strings = re.findall('.(\\d+.\\d+.\\d+\\s+\\d+:+\\d+:+\\d+).\\s+(\\w+\\s\\w+\\s\\w+|\\w+\\s\\w+|\\w+):\\s(.*)', f.read())\n",
-    "f.close()"
+    "with open('chat.txt', 'r') as f:\n",
+    "    # Feed the file text into findall(); it returns a list of all the found strings \n",
+    "    # (written for iphone export format)\n",
+    "    strings = re.findall('.(\\d+.\\d+.\\d+\\s+\\d+:+\\d+:+\\d+).\\s+(\\w+\\s\\w+\\s\\w+|\\w+\\s\\w+|\\w+):\\s(.*)', f.read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create list of dictionaries of messages\n",
     "list_messages = []\n",
     "for message in strings:\n",
-    "    a = dict({'TimeStamp': message[0], 'Sender_name': message[1], 'Content': message[2]})\n",
-    "    list_messages.append(a)"
+    "    dict_ = dict({'TimeStamp': message[0], 'Sender_name': message[1], 'Content': message[2]})\n",
+    "    list_messages.append(dict_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_list = []\n",
+    "clean_list  = []\n",
     "number_words = []\n",
     "\n",
-    "for message in list_messages: # iterate over dictionaries of recipes\n",
+    "# Iterate over messages\n",
+    "for message in list_messages: \n",
     "    \n",
     "    # If there is a content key...\n",
     "    if 'Content' in message.keys():\n",
     "        # Look in the content key\n",
     "        clean_msg = fix_text(message['Content'])\n",
     "        \n",
+    "        # Format multimedia messages\n",
     "        if '<' in clean_msg and 'omitid' in clean_msg:\n",
     "            if 'audio' in clean_msg: clean_msg = '<audio>'\n",
     "            if 'video' in clean_msg: clean_msg = '<video>'\n",
@@ -74,8 +74,9 @@
     "        # Convert letters to lower case\n",
     "        clean_msg = clean_msg.lower()\n",
     "        \n",
+    "        # Iterate over characters in the message\n",
     "        for char in clean_msg:            \n",
-    "            # Remove special characters (excluding emoji, spaces : or _, which appear in the emoji)\n",
+    "            # Remove special characters\n",
     "            if not(char.islower() or char in [' ','_',':',\"'\",'<','>'] or char in emoji.UNICODE_EMOJI): \n",
     "                clean_msg = clean_msg.replace(char, \"\")\n",
     "            \n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
        "9                 Koldo  2/7/16 16:52:30             1"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,15 +216,18 @@
     "df_msg = df_msg[['Sender_name', 'TimeStamp']]\n",
     "\n",
     "# Fix bad unicode characters in sender and change time format\n",
-    "#df_msg['TimeStamp']   = df_msg['TimeStamp'].apply(datetime.datetime.fromtimestamp)\n",
     "df_msg['Sender_name'] = df_msg['Sender_name'].apply(fix_text)\n",
+    "\n",
+    "# Append columns with the number of words per message\n",
     "df_msg['number_words'] = number_words\n",
+    "\n",
+    "# Display results\n",
     "df_msg.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -302,27 +306,23 @@
        "4  Paula AAFermin Cueto  1/7/16 21:27:48        de  False"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Repeat row as many times as words in the the message\n",
-    "df_msg_rep = df_msg.set_index(['Sender_name'])['TimeStamp'].repeat(df_msg['number_words']).reset_index()\n",
+    "df_msg_word = df_msg.set_index(['Sender_name'])['TimeStamp'].repeat(df_msg['number_words']).reset_index()\n",
     "\n",
-    "df_msg_rep['word']  = list(itertools.chain(*clean_list))\n",
-    "df_msg_rep['emoji'] = [':' in word for word in df_msg_rep['word']]\n",
-    "df_msg_rep.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_msg_rep.to_csv('whatsapp_chat.csv', sep = '\\t')"
+    "# Append column with flattened list of words\n",
+    "df_msg_word['word']  = list(itertools.chain(*clean_list))\n",
+    "\n",
+    "# Append column indicator of emoji\n",
+    "df_msg_word['emoji'] = [':' in word for word in df_msg_word['word']]\n",
+    "\n",
+    "# Display results\n",
+    "df_msg_word.head()"
    ]
   },
   {
@@ -330,7 +330,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save to csv\n",
+    "df_msg_word.to_csv('whatsapp_chat.csv', sep = '\\t')"
+   ]
   }
  ],
  "metadata": {
